tests/samples/negative/error_handling/try_non_result.ax
module try_non_result;

fn main() -> i32 {
    let value: i32 = 1?;
    return value;
}
